# AutoDDG

./: .gitignore  README.md  pyproject.toml
AutoDDG/DAVE/: demo.py
AutoDDG/DAVE/models/: dave.py
AutoDDG/DAVE/utils/: arg_parser.py
AutoDDG/data/: __init__.py  arg_parser.py  datumaro.py
AutoDDG/eval/: BaseFewShotEvaluator.py  DAVEFewShotEvaluator.py
AutoDDG/utils/: draw.py  logging.py
scripts/: DAVE_few_shot_eval.py  demos.txt  eval.py  prepare_datasets.py
scripts/configs/: DAVE_birds_few_shot_eval.json
src/AutoDDG/DAVE/models/: backbone.py  box_prediction.py  dave.py  feat_comparison.py  positional_encoding.py  regression_head.py  transformer.py
src/AutoDDG/DAVE/utils/: arg_parser.py  data.py  helpers.py
src/AutoDDG/config/: Config.py  __init__.py
src/AutoDDG/data/: AerialSeabirdsProcessor.py
src/AutoDDG/eval/: BaseFewShotEvaluator.py  DAVEFewShotEvaluator.py  FewShotEvaluatorFactory.py  GeCoFewShotEvaluator.py
src/AutoDDG/job/: Job.py  __init__.py
src/AutoDDG/utils/: logging.py  random.py
